# libigl

./: .gitignore  .gitmodules
new_python/: CMakeLists.txt  adjacency_matrix.cpp  all_edges.cpp  all_pairs_distances.cpp  edges.cpp  oriented_facets.cpp
new_python/igl/: helpers.py  viewer.py
new_python/scripts/: basic_function.mako  errors.txt  generate_bindings.py
new_python/src/: adjacency_matrix.cpp  arap_linear_block.cpp  arap_rhs.cpp  average_onto_faces.cpp  average_onto_vertices.cpp  avg_edge_length.cpp  bfs.cpp  components.cpp  cotmatrix.cpp  edge_topology.cpp  edges.cpp  gaussian_curvature.cpp  grad.cpp  invert_diag.cpp  jet.cpp  massmatrix.cpp  oriented_facets.cpp  parula.cpp  principal_curvature.cpp  readOBJ.cpp  readOFF.cpp  read_obj.cpp  read_off.cpp  read_triangle_mesh.cpp  triangle_triangulate.cpp  triangulate.cpp  writeOBJ.cpp  write_obj.cpp
new_python/src/include/: typedefs.h
new_python/tests/: test_basic.py
new_python/tmp/: 101_FileIO.py  adjacency_matrix.cpp  all_edges.cpp  all_pairs_distances.cpp  errors.txt  files.txt  funcs
new_python/todo/: LinSpaced.cpp  MeshBooleanType.cpp  all_edges.cpp  anttweakbar_cocoa_key_to_anttweakbar_key.cpp  arap_linear_block.cpp  arap_rhs.cpp  average_onto_faces.cpp  axis_angle_to_quat.cpp  basename.cpp  bfs.cpp  bijective_composite_harmonic_mapping.cpp  bone_parents.cpp  boundary_facets.cpp  cat.cpp  centroid.cpp  columnize.cpp  comb_cross_field.cpp  comb_frame_field.cpp  combine.cpp  components.cpp  connect_boundary_to_infinity.cpp  copyleft_cgal_assign_scalar.cpp  copyleft_cgal_extract_feature.cpp  copyleft_cgal_half_space_box.cpp  copyleft_cgal_incircle.cpp  copyleft_cgal_intersect_with_half_space.cpp  copyleft_cgal_mesh_boolean.cpp  copyleft_cgal_mesh_to_polyhedron.cpp  copyleft_cgal_minkowski_sum.cpp  copyleft_cgal_order_facets_around_edge.cpp  copyleft_cgal_orient2D.cpp  copyleft_cgal_outer_element.cpp  copyleft_cgal_peel_outer_hull_layers.cpp  copyleft_cgal_peel_winding_number_layers.cpp  copyleft_cgal_piecewise_constant_winding_number.cpp  copyleft_cgal_point_areas.cpp  copyleft_cgal_point_mesh_squared_distance.cpp  copyleft_cgal_point_solid_signed_squared_distance.cpp  copyleft_cgal_points_inside_component.cpp  copyleft_cgal_read_triangle_mesh.cpp  (+154 more)
new_python/todo/complete/: adjacency_matrix.cpp  all_pairs_distances.cpp  average_onto_vertices.cpp  avg_edge_length.cpp  barycenter.cpp  barycentric_coordinates.cpp  canonical_quaternions.cpp  ceil.cpp  circumradius.cpp  comb_line_field.cpp  compute_frame_field_bisectors.cpp  copyleft_cgal_assign.cpp  copyleft_cgal_component_inside_component.cpp  copyleft_cgal_convex_hull.cpp  copyleft_cgal_delaunay_triangulation.cpp  copyleft_cgal_lexicographic_triangulation.cpp  copyleft_cgal_outer_hull.cpp  copyleft_marching_cubes.cpp  cotmatrix.cpp  cotmatrix_entries.cpp  cumsum.cpp  cylinder.cpp  directed_edge_parents.cpp  ears.cpp  embree_reorient_facets_raycast.cpp  exact_geodesic.cpp  flood_fill.cpp  gaussian_curvature.cpp  inradius.cpp  is_border_vertex.cpp  is_boundary_edge.cpp  is_edge_manifold.cpp  is_vertex_manifold.cpp  local_basis.cpp  look_at.cpp  massmatrix.cpp  normalize_row_lengths.cpp  normalize_row_sums.cpp  opengl2_draw_rectangular_marquee.cpp  opengl_destroy_shader_program.cpp  (+23 more)
new_python/todo/partial/: adjacency_list.cpp  all.cpp  ambient_occlusion.cpp  angular_distance.cpp  any.cpp  any_of.cpp  biharmonic_coordinates.cpp  boundary_conditions.cpp  boundary_loop.cpp  bounding_box.cpp  bounding_box_diagonal.cpp  circulation.cpp  collapse_edge.cpp  collapse_small_triangles.cpp  colon.cpp  colormap.cpp  column_to_quats.cpp  copyleft_cgal_cell_adjacency.cpp  copyleft_cgal_closest_facet.cpp  copyleft_cgal_complex_to_mesh.cpp  copyleft_cgal_extract_cells.cpp  copyleft_cgal_fast_winding_number.cpp  copyleft_cgal_hausdorff.cpp  copyleft_cgal_insert_into_cdt.cpp  copyleft_cgal_insphere.cpp  copyleft_cgal_intersect_other.cpp  copyleft_cgal_mesh_boolean_type_to_funcs.cpp  copyleft_cgal_mesh_to_cgal_triangle_list.cpp  copyleft_cgal_order_facets_around_edges.cpp  (+164 more)
new_python/tutorial/: Tutorials.ipynb
python/: py_doc.h  (+4 more)
(+87 files in other folders)
